# ren

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  requirements.txt  vcpkg.json
editor/: AssetCompiler.cpp  AssetCompiler.hpp  AssetWatcher.cpp  AssetWatcher.hpp  Assets.cpp  Assets.hpp  CMakeLists.txt  Editor.cpp  Editor.hpp  EditorUI.cpp  EditorUI.hpp  FileDialog.hpp  FileWatcher.hpp  Guid.hpp  LinuxFileWatcher.cpp  Meta.cpp  Meta.hpp  UIWidgets.cpp  UIWidgets.hpp  UiWidgets.cpp  UiWidgets.hpp  Win32FileWatcher.cpp  editor.cpp  main.cpp
examples/: AppBase-DirectX12.hpp  AppBase.cpp  AppBase.hpp  CMakeLists.txt  CreateDevice-DirectX12.cpp  CreateDevice-Vulkan.cpp  ImGuiApp.cpp  ImGuiApp.hpp  app-base.cpp  app-base.hpp  app-dx12.hpp  app-vk.hpp  create-device.cpp  draw-triangle.cpp  entity-stress-test.cpp  tinygltf.cpp  view-gltf.cpp
lib/: AssetLoader.cpp  Attachments.hpp  Baking.cpp  Baking.hpp  Batch.hpp  Buffer.cpp  Buffer.hpp  BufferReference.hpp  BumpAllocator.cpp  BumpAllocator.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Camera.inl  CommandAllocator.cpp  CommandAllocator.hpp  CommandBuffer.cpp  CommandPool.hpp  CommandRecorder.cpp  CommandRecorder.hpp  Config.hpp  DebugNames.hpp  DenseHandleMap.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  DescriptorSetAllocator.cpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  DevicePtr.hpp  DrawSet.hpp  ExposureOptions.hpp  Formats.cpp  Formats.hpp  FreeListAllocator.cpp  FreeListAllocator.hpp  GenDispatchTable.py  GpuScene.cpp  GpuScene.hpp  Handle.hpp  (+80 more)
lib/DirectX12/: CMakeLists.txt  D3D12MA.cpp  DirectX12CPUDescriptorPool.cpp  DirectX12CommandAllocator.cpp  DirectX12CommandBuffer.cpp  DirectX12DescriptorPool.cpp  DirectX12Device.cpp  DirectX12Reflection.cpp  DirectX12RenderGraph.cpp  DirectX12Swapchain.cpp  ren-dx12.cpp
lib/Passes/: AutomaticExposure.cpp  AutomaticExposure.hpp  CMakeLists.txt  CameraExposure.cpp  CameraExposure.hpp  Color.cpp  EarlyZ.cpp  EarlyZ.hpp  Exposure.cpp  Exposure.hpp  GpuSceneUpdate.cpp  GpuSceneUpdate.hpp  HiZ.cpp  ImGui.cpp  ImGui.hpp  ManualExposure.cpp  Opaque.cpp  Opaque.hpp  Pass.hpp  PostProcessing.cpp  PostProcessing.hpp  Postprocessing.cpp  Present.cpp  Present.hpp  ReinhardToneMapping.cpp  ToneMapping.cpp  Upload.cpp  Upload.hpp
lib/Support/: Algorithm.hpp  Array.hpp  DenseSlotMap.hpp  Enum.hpp  Errors.hpp  Flags.hpp  GenArray.hpp  GenIndex.hpp  GenIndexPool.hpp  GenMap.hpp  Hash.hpp  LinearMap.hpp  Macros.hpp  Math.hpp  NewType.hpp  NotNull.hpp  PriorityQueue.hpp  SecondaryMap.hpp  Span.hpp  StableVector.hpp  String.hpp  TypeMap.hpp  Variant.hpp  Vector.hpp  Views.hpp
lib/Vulkan/: CMakeLists.txt  RenVulkan.cpp  VMA.cpp  VulkanCommandAllocator.cpp  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanDevice.cpp  VulkanPipelineCompiler.cpp  VulkanReflection.cpp  VulkanRenderGraph.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp  ren-vk.cpp  vma.cpp
lib/core/: Arena.cpp  Array.hpp  Assert.cpp  Assert.hpp  BitSet.hpp  BlockAllocator.cpp  CmdLine.cpp  DLL.hpp  DynamicBitset.hpp  Errors.hpp  Fiber.cpp  FileSystem.cpp  FileSystem.hpp  Flags.hpp  FlatMap.hpp  FlatSet.hpp  GLTF.cpp  GenArray.hpp  GenIndex.hpp  GenIndexPool.hpp  GenMap.hpp  Hash.hpp  HashMap.hpp  HashSet.hpp  IO.cpp  IO.hpp  JSON.cpp  Job.cpp  Job.hpp  JobTLS.cpp  LinearMap.hpp  LinuxChrono.cpp  LinuxFiber.cpp  LinuxFiber.s  LinuxFileSystem.cpp  LinuxFileWatcher.cpp  LinuxFutex.cpp  LinuxRandom.cpp  LinuxThread.cpp  LinuxVm.cpp  (+34 more)
lib/glsl/: Array.h  BRDF.h  BakeDhrLut.comp  BakeDhrLut.h  BakeIrradianceMap.comp  BakeIrradianceMap.h  BakeReflectionMap.comp  BakeReflectionMap.h  BakeSoLut.comp  BakeSoLut.h  BakeSpecularMap.comp  BakeSpecularMap.h  Batch.glsl  Batch.h  Batch.hpp  BufferReference.glsl  BufferReference.h  BufferReference.hpp  BuildLuminanceHistogram.comp  CMakeLists.txt  CalculateNormalMatrices.comp  CalculateNormalMatrices.h  CalculateNormalMatricesPass.h  Common.h  Compute.glsl  ComputeDHRLut.comp  ComputeDHRLut.h  Culling.glsl  Culling.h  DevicePtr.glsl  DevicePtr.h  DevicePtr.hpp  EarlyZ.frag  EarlyZ.h  EarlyZ.vert  EarlyZPass.glsl  EarlyZPass.h  EarlyZPass.hpp  EarlyZPass.vert  ExclusiveScanUint32.comp  (+99 more)
lib/hlsl/: CMakeLists.txt  FragmentShader.hlsl  ReinhardTonemap.hlsl  VertexShader.hlsl
lib/include/: AssetLoader.hpp  Attachments.hpp  Buffer.hpp  Buffer.inl  BufferPool.hpp  BufferReference.hpp  Camera.hpp  Camera.inl  CommandAllocator.hpp  CommandBuffer.hpp  CommandRecorder.hpp  Config.hpp  DebugNames.hpp  Def.hpp  DeleteQueue.hpp  DescriptorSetAllocator.hpp  Descriptors.hpp  Device.hpp  ExposureOptions.hpp  Formats.hpp  Formats.inl  FreeListAllocator.hpp  Handle.hpp  Material.hpp  MaterialAllocator.hpp  MaterialPipelineCompiler.hpp  MemoryAccesses.hpp  Mesh.hpp  Model.hpp  Passes.hpp  Pipeline.hpp  PipelineCompiler.hpp  PipelineLoading.hpp  PipelineStages.hpp  PostProcessingOptions.hpp  PostprocessPasses.hpp  Postprocessing.hpp  PostprocessingOptions.hpp  Reflection.hpp  RenderGraph.hpp  (+15 more)
lib/passes/: ComputeDHRLut.cpp  ComputeDHRLut.hpp  Exposure.cpp  Exposure.hpp  GpuSceneUpdate.cpp  GpuSceneUpdate.hpp  HiZ.cpp  HiZ.hpp  ImGui.cpp  ImGui.hpp  MeshPass.cpp  MeshPass.hpp  Opaque.cpp  Opaque.hpp  Pass.hpp  PostProcessing.cpp  PostProcessing.hpp  Present.cpp  Present.hpp  Skybox.cpp  Skybox.hpp
lib/sh/: BakeIrradianceMap.comp  BakeIrradianceMap.h  BakeReflectionMap.comp  BakeReflectionMap.h  BakeSpecularMap.comp  BakeSpecularMap.h  CMakeLists.txt  EarlyZ.h  EarlyZ.vert  ExclusiveScanUint32.comp  ExclusiveScanUint32.h  Geometry.h  HiZ.comp  HiZ.h  ImGui.frag  ImGui.h  ImGui.vert  InstanceCullingAndLOD.comp  InstanceCullingAndLOD.h  Lighting.h  LocalToneMapping.comp  LocalToneMapping.h  LocalToneMappingAccumulate.comp  LocalToneMappingAccumulate.h  LocalToneMappingInit.comp  LocalToneMappingInit.h  LocalToneMappingLLM.comp  LocalToneMappingLLM.h  LocalToneMappingLightness.comp  LocalToneMappingLightness.h  LocalToneMappingReduce.comp  LocalToneMappingReduce.h  LuminanceHistogram.h  Opaque.frag  (+30 more)
rust/: Cargo.toml  build.rs
tests/: CMakeLists.txt
(+284 files in other folders)
