[package]
name = "renderer2"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.61.0"
cmake = "0.1.49"

[dev-dependencies]
ash = "0.37.0"
sdl2 = "0.35.2"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.4.3"

[target.'cfg(target_os = "windows")'.dev-dependencies]
windows = {version = "0.43.0", features = ["Win32_Graphics_Dxgi", "Win32_Foundation"]}

[target.'cfg(target_os = "windows")'.dev-dependencies.sdl2]
features = ["raw-window-handle"]

[target.'cfg(target_env = "msvc")'.dev-dependencies.sdl2]
features = ["bundled"]
